[gd_scene load_steps=15 format=3 uid="uid://cdf6alep5my7c"]

[ext_resource type="Script" path="res://Visual_Interface.gd" id="1_6xkr7"]
[ext_resource type="PackedScene" uid="uid://c4k623v338bna" path="res://visual_board.tscn" id="2_j7w6q"]
[ext_resource type="Texture2D" uid="uid://bdue6jfuy6w67" path="res://Ressources/BoxSelector.png" id="3_6jiq7"]
[ext_resource type="Texture2D" uid="uid://pwev7645c580" path="res://Ressources/Box.png" id="3_arwwh"]
[ext_resource type="PackedScene" uid="uid://cp7k2h4l04kwv" path="res://Ui/move_shower.tscn" id="4_v48im"]
[ext_resource type="Texture2D" uid="uid://bmtd0yw48jn00" path="res://Ressources/Piece_Pedestal.png" id="6_0wng1"]
[ext_resource type="LabelSettings" uid="uid://bkqckmjlcc5ts" path="res://Ui/small_label.tres" id="6_ker3w"]
[ext_resource type="PackedScene" uid="uid://be4cmng3h0sma" path="res://Ui/color_score.tscn" id="7_6q7va"]
[ext_resource type="PackedScene" uid="uid://c1hwg83wuro26" path="res://Ui/text_box_2.tscn" id="7_8h172"]
[ext_resource type="PackedScene" uid="uid://c2xyo8g580b7r" path="res://Ui/Menu/version_print.tscn" id="7_nu2tp"]
[ext_resource type="PackedScene" uid="uid://det7u6axd8g6p" path="res://Ui/Menu/hint_window.tscn" id="9_2ashe"]
[ext_resource type="PackedScene" uid="uid://o4t21skjpnqx" path="res://Ui/top_banner.tscn" id="9_n61lf"]
[ext_resource type="PackedScene" uid="uid://boqtqxpn8bqhe" path="res://Ui/button_banner.tscn" id="10_v2y4l"]

[sub_resource type="LabelSettings" id="LabelSettings_ufkma"]
font_size = 8

[node name="Visual_Interface" type="Node2D"]
script = ExtResource("1_6xkr7")

[node name="Board" parent="." instance=ExtResource("2_j7w6q")]

[node name="Selector" type="Sprite2D" parent="Board"]
texture_filter = 1
texture = ExtResource("3_6jiq7")
offset = Vector2(12, 12)
hframes = 2

[node name="Targets" type="Node2D" parent="Board"]
position = Vector2(12, 12)

[node name="Move_Shower" parent="Board/Targets" instance=ExtResource("4_v48im")]
visible = false

[node name="Side_UI" type="Node2D" parent="."]
position = Vector2(270, 134)

[node name="Sprite2D" type="Sprite2D" parent="Side_UI"]
visible = false
z_index = -20
texture = ExtResource("3_arwwh")

[node name="Sprite2D2" type="Sprite2D" parent="Side_UI"]
texture = ExtResource("6_0wng1")

[node name="Hand" type="Node2D" parent="."]
position = Vector2(270, 130)

[node name="Sprite2D" type="Sprite2D" parent="Hand"]
visible = false
z_index = -20
texture = ExtResource("3_arwwh")

[node name="Text_Box" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 194.0
offset_top = 160.0
offset_right = 476.0
offset_bottom = 254.0
mouse_filter = 1

[node name="Text_Box_2" parent="Text_Box" instance=ExtResource("7_8h172")]
custom_minimum_size = Vector2(0, 0)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
mouse_default_cursor_shape = 0

[node name="Text_box_old" type="Node2D" parent="."]
z_index = 5
position = Vector2(194, 160)

[node name="Color_Score" type="Node2D" parent="."]
visible = false
z_index = 5
position = Vector2(0, 599)

[node name="Control" type="Control" parent="Color_Score"]
layout_mode = 3
anchors_preset = 0
offset_right = 201.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Color_Score/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Color Group : "

[node name="Color_Score" type="VBoxContainer" parent="Color_Score/Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_bottom = 33.0
grow_horizontal = 0
tooltip_text = "turns"

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Turn: "

[node name="Label2" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="Label4" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "32"

[node name="Temp Spacing" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "    "

[node name="Score" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -33.0
offset_right = 33.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Label5" type="Label" parent="Control/Score"]
layout_mode = 2
text = "Score :"

[node name="Label6" type="Label" parent="Control/Score"]
layout_mode = 2
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Click/enter to place "

[node name="Version_print" parent="Control" instance=ExtResource("7_nu2tp")]
layout_mode = 1
offset_left = -145.0

[node name="Label3" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 154.0
grow_vertical = 0
text = "made by Guiwong"
label_settings = SubResource("LabelSettings_ufkma")
vertical_alignment = 2

[node name="Tutorial" type="Node2D" parent="."]
position = Vector2(0, 32)

[node name="VBoxContainer" type="VBoxContainer" parent="Tutorial"]
visible = false
offset_left = 200.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 48.0

[node name="Label4" type="Label" parent="Tutorial/VBoxContainer"]
layout_mode = 2
text = "press Space to toggle score view"
label_settings = ExtResource("6_ker3w")

[node name="Label5" type="Label" parent="Tutorial/VBoxContainer"]
layout_mode = 2
text = "press Tab  to cycle active pieces"
label_settings = ExtResource("6_ker3w")

[node name="Label6" type="Label" parent="Tutorial/VBoxContainer"]
layout_mode = 2
text = "press Escape to pause game"
label_settings = ExtResource("6_ker3w")

[node name="Hint_Window" parent="Tutorial" instance=ExtResource("9_2ashe")]
position = Vector2(342, 3)

[node name="Top_Banner" parent="." instance=ExtResource("9_n61lf")]
z_index = -2
offset_left = 192.0
offset_right = 192.0

[node name="Button_banner" parent="." instance=ExtResource("10_v2y4l")]
offset_top = 192.0
offset_bottom = 192.0

[node name="Overlay" type="Node2D" parent="."]

[node name="Color_Lines" parent="Overlay" instance=ExtResource("7_6q7va")]
visible = false

[node name="Score_UI" type="Node2D" parent="Overlay"]
visible = false
z_index = 5
position = Vector2(12, 12)
